Separate by material, materials dissappear after reload #49228

Closed
opened 2016-09-02 16:55:56 +02:00 by Nikola · 5 comments

I am not attaching any .blend as the problem is easily reproduced, and .blend would be of no use since evidences dissapear. To reproduce the problem.

  • Assign diferent materials to sides of default cube (or any other model)
  • in edit mode "P" and choose "by material"
  • now you have separate objects that inherit only material corresponding to that part, GREAT
    now:
  • save, exit and reopen (or Ctrl+Shift+O to reload)

All the materials that took part in separation by material are gone from the project (if you had other objects in the scene and have not separated their parts by materials they will stay intact)

I am using Blender 2.77a on 64bit Win10 Pro laptop (Intel i7 6700HQ, 16GB ram, nvidia gtx960m)

This is my first bug report ever, hope I have not broken any rules, so bear with me please.
TNX

I am not attaching any .blend as the problem is easily reproduced, and .blend would be of no use since evidences dissapear. To reproduce the problem. - Assign diferent materials to sides of default cube (or any other model) - in edit mode "P" and choose "by material" - now you have separate objects that inherit only material corresponding to that part, GREAT now: - save, exit and reopen (or Ctrl+Shift+O to reload) All the materials that took part in separation by material are gone from the project (if you had other objects in the scene and have not separated their parts by materials they will stay intact) I am using Blender 2.77a on 64bit Win10 Pro laptop (Intel i7 6700HQ, 16GB ram, nvidia gtx960m) This is my first bug report ever, hope I have not broken any rules, so bear with me please. TNX
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NikolaKovac

Added subscriber: @NikolaKovac
Bastien Montagne self-assigned this 2016-09-02 19:10:54 +02:00

Yet another mismatch between de-refcounting material and not refcounting them again… sigh

Will commit fix as soon as repo is open again.

Yet another mismatch between de-refcounting material and not refcounting them again… *sigh* Will commit fix as soon as repo is open again.

This issue was referenced by 6c0307f888

This issue was referenced by 6c0307f88854aada929359ff1eaad133e950188d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49228
No description provided.